# streamlit-eda

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: App.py
