[tool.poetry]
name = "eda-streamlit"
version = "0.1.0"
description = ""
authors = ["Przemysław Sapkowski <przemeksapkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
snowflake-snowpark-python = {extras = ["pandas"], version = "^1.17.0"}
pygwalker = "^0.4.8.6"
streamlit = "^1.35.0"
streamlit-ace = "^0.1.1"
streamlit-ydata-profiling = "^0.2.1"
openpyxl = "^3.1.3"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
